clusters/cluster0/kubernetes/apps/media/radarr/app/radarr-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
spec:
  hostnames:
  - radarr.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: cert-manager
  rules:
  - backendRefs:
    - name: radarr-service
      port: 7878
    matches:
    - path:
        type: PathPrefix
        value: /
